<resources>
    <string name="app_name">MeetingMate</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_files">Files</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="api_key">AIzaSyCdbDncQpctNUfUrMOuPBc1_37jESf_VEk</string>
    <string name="title_activity_file_upload">FileUploadActivity</string>
    <string name="select_an_event_to_share_the_document">Select an event to share the document</string>
    <string name="share_via_bluetooth">Share via Bluetooth</string>
    <string name="upload">Upload</string>
    <string name="files">Files</string>
</resources>
