<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_files"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_files" />

    <item
        android:id="@+id/empty_nav_menu"
        android:icon="@drawable/ic_empty_24dp"
        android:title=""
        android:enabled="false"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_settings" />

</menu>
